replace deprecated Runtime exec with ProcessBuilder